--- a/labs/lab02_apis.ipynb
+++ b/labs/lab02_apis.ipynb
@@ -315,11 +315,22 @@
         "    # Convert to prices: P(t) = P(0) * exp(cumsum(returns))\n",
         "    levels = 100 * np.exp(np.cumsum(shocks, axis=0))\n",
         "    \n",
-        "    return pd.DataFrame(levels, index=dates, columns=symbols)\n",
-        "\n",
-        "### Step 2: Execute three-tier fetching strategy\n",
-        "\n",
-        "```{python}\n",
+        "    return pd.DataFrame(levels, index=dates, columns=symbols)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Step 2: Execute three-tier fetching strategy"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {},
+      "source": [
         "# === Try primary source (yfinance) ===\n",
         "try:\n",
         "    prices = get_close_from_yf(symbols)\n",
