--- a/labs/lab10_pipelines.ipynb
+++ b/labs/lab10_pipelines.ipynb
@@ -13,6 +13,7 @@
         "    number-sections: true\n",
         "execute:\n",
         "  echo: true\n",
+        "  eval: false\n",
         "  warning: false\n",
         "  message: false\n",
         "---\n",
@@ -1086,6 +1087,338 @@
         "- **Fairness monitoring**: Track model performance across demographic segments\n",
         "- **Explainability**: Implement SHAP or LIME for model interpretability\n",
         "- **Regulatory compliance**: Document models following SR 11-7 framework\n",
+        "\n",
+        "---\n",
+        "\n",
+        "## Advanced Extension: Asset Embeddings as Learned Features (FIN720)\n",
+        "\n",
+        "::: {.callout-note}\n",
+        "### Optional Advanced Module\n",
+        "This extension is designed for FIN720 students seeking to demonstrate technical sophistication. It connects to cutting-edge research [@gabaix2025assetembeddings] and provides optional enhancement for Coursework 2.\n",
+        "\n",
+        "**Expected time**: 45-60 minutes\n",
+        ":::\n",
+        "\n",
+        "### Motivation: Beyond Hand-Crafted Characteristics\n",
+        "\n",
+        "Traditional factor models use characteristics we believe matter—size, value, momentum. But what if we learned representations directly from portfolio holdings? This exercise demonstrates how embedding techniques from NLP translate to finance, bridging Week 4's discussion of algorithmic investment with production ML concepts.\n",
+        "\n",
+        "The key insight from @gabaix2025assetembeddings: portfolio holdings encode rich information about asset relationships. Assets appearing in similar portfolios likely share investment characteristics—just as words appearing in similar contexts have related meanings. We can learn these relationships without hand-crafting features.\n",
+        "\n",
+        "### Simplified Holdings-Based Embeddings\n",
+        "\n",
+        "We'll implement a lightweight version using synthetic mutual fund holdings:"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {},
+      "source": [
+        "# === Asset Embeddings Implementation ===\n",
+        "import pandas as pd\n",
+        "import numpy as np\n",
+        "from sklearn.decomposition import PCA\n",
+        "from sklearn.preprocessing import StandardScaler\n",
+        "from scipy.spatial.distance import cosine\n",
+        "import matplotlib.pyplot as plt\n",
+        "from sklearn.manifold import TSNE\n",
+        "\n",
+        "print(\"\\n\" + \"=\"*70)\n",
+        "print(\"ASSET EMBEDDINGS: LEARNING FROM PORTFOLIO HOLDINGS\")\n",
+        "print(\"=\"*70)\n",
+        "\n",
+        "# Generate synthetic portfolio holdings\n",
+        "# In practice, use 13F filings or mutual fund holdings data\n",
+        "np.random.seed(42)\n",
+        "\n",
+        "n_funds = 100  # Number of institutional portfolios\n",
+        "n_assets = 50  # Number of assets in universe\n",
+        "\n",
+        "print(f\"\\nGenerating synthetic holdings data:\")\n",
+        "print(f\"  Portfolios: {n_funds}\")\n",
+        "print(f\"  Assets: {n_assets}\")\n",
+        "\n",
+        "# Create holdings matrix using latent factor structure\n",
+        "# This simulates reality: portfolios share common themes (value, growth, sector)\n",
+        "n_latent_factors = 5\n",
+        "fund_loadings = np.random.randn(n_funds, n_latent_factors)\n",
+        "asset_loadings = np.random.randn(n_assets, n_latent_factors)\n",
+        "\n",
+        "# Holdings as exp(fund_factor • asset_factor) for log-normality\n",
+        "holdings_raw = np.exp(fund_loadings @ asset_loadings.T)\n",
+        "\n",
+        "# Normalize to portfolio weights (each row sums to 1)\n",
+        "holdings = holdings_raw / holdings_raw.sum(axis=1, keepdims=True)\n",
+        "\n",
+        "# Create DataFrame\n",
+        "asset_names = [f\"ASSET_{i:02d}\" for i in range(n_assets)]\n",
+        "fund_names = [f\"FUND_{i:03d}\" for i in range(n_funds)]\n",
+        "holdings_df = pd.DataFrame(holdings, index=fund_names, columns=asset_names)\n",
+        "\n",
+        "print(\"\\nSample Holdings (first 5 funds × first 5 assets):\")\n",
+        "print(holdings_df.iloc[:5, :5].round(4))\n",
+        "print(f\"\\nPortfolio weight verification (each row should sum to ≈1.0):\")\n",
+        "print(f\"  Min: {holdings_df.sum(axis=1).min():.4f}\")\n",
+        "print(f\"  Max: {holdings_df.sum(axis=1).max():.4f}\")"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Method 1: PCA-Based Embeddings (Recommender System Approach)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {},
+      "source": [
+        "class PortfolioEmbeddings:\n",
+        "    \"\"\"\n",
+        "    Learn asset embeddings from portfolio holdings via PCA.\n",
+        "    \n",
+        "    This is analogous to matrix factorization in recommender systems\n",
+        "    (e.g., Netflix learning movie embeddings from user ratings).\n",
+        "    \"\"\"\n",
+        "    \n",
+        "    def __init__(self, n_components=10):\n",
+        "        self.n_components = n_components\n",
+        "        self.scaler = StandardScaler()\n",
+        "        self.pca = PCA(n_components=n_components)\n",
+        "        self.asset_embeddings_ = None\n",
+        "        self.explained_variance_ = None\n",
+        "        \n",
+        "    def fit(self, holdings_df):\n",
+        "        \"\"\"\n",
+        "        Learn embeddings from holdings matrix.\n",
+        "        \n",
+        "        Args:\n",
+        "            holdings_df: DataFrame (funds × assets) of portfolio weights\n",
+        "        \n",
+        "        Returns:\n",
+        "            self\n",
+        "        \"\"\"\n",
+        "        # Transpose: we want to represent assets in terms of fund holdings\n",
+        "        # Each asset is characterized by which funds hold it\n",
+        "        X = holdings_df.T  # Now assets × funds\n",
+        "        \n",
+        "        # Standardize (mean-center and scale)\n",
+        "        X_scaled = self.scaler.fit_transform(X)\n",
+        "        \n",
+        "        # Fit PCA: find principal components\n",
+        "        self.pca.fit(X_scaled)\n",
+        "        \n",
+        "        # Asset embeddings are projections onto principal components\n",
+        "        self.asset_embeddings_ = pd.DataFrame(\n",
+        "            self.pca.transform(X_scaled),\n",
+        "            index=holdings_df.columns,  # Asset names\n",
+        "            columns=[f\"embed_{i}\" for i in range(self.n_components)]\n",
+        "        )\n",
+        "        \n",
+        "        self.explained_variance_ = self.pca.explained_variance_ratio_\n",
+        "        \n",
+        "        return self\n",
+        "    \n",
+        "    def similarity(self, asset1, asset2):\n",
+        "        \"\"\"Compute cosine similarity between two assets.\"\"\"\n",
+        "        emb1 = self.asset_embeddings_.loc[asset1].values\n",
+        "        emb2 = self.asset_embeddings_.loc[asset2].values\n",
+        "        return 1 - cosine(emb1, emb2)\n",
+        "    \n",
+        "    def most_similar(self, asset, top_n=5):\n",
+        "        \"\"\"Find most similar assets to a given asset.\"\"\"\n",
+        "        target_emb = self.asset_embeddings_.loc[asset].values\n",
+        "        \n",
+        "        similarities = {}\n",
+        "        for other_asset in self.asset_embeddings_.index:\n",
+        "            if other_asset != asset:\n",
+        "                other_emb = self.asset_embeddings_.loc[other_asset].values\n",
+        "                similarities[other_asset] = 1 - cosine(target_emb, other_emb)\n",
+        "        \n",
+        "        return pd.Series(similarities).nlargest(top_n)\n",
+        "\n",
+        "# Fit embeddings\n",
+        "print(\"\\n\" + \"=\"*70)\n",
+        "print(\"LEARNING EMBEDDINGS\")\n",
+        "print(\"=\"*70)\n",
+        "\n",
+        "embedder = PortfolioEmbeddings(n_components=10)\n",
+        "embedder.fit(holdings_df)\n",
+        "\n",
+        "print(f\"\\nLearned {embedder.n_components}-dimensional embeddings for {len(embedder.asset_embeddings_)} assets\")\n",
+        "print(f\"\\nVariance explained by components:\")\n",
+        "for i, var in enumerate(embedder.explained_variance_[:5]):\n",
+        "    print(f\"  Component {i+1}: {var:.1%}\")\n",
+        "print(f\"  Total (first 5): {embedder.explained_variance_[:5].sum():.1%}\")\n",
+        "\n",
+        "print(\"\\nExample: Most similar assets to ASSET_00:\")\n",
+        "print(embedder.most_similar(\"ASSET_00\", top_n=5).round(4))"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Validation: Do Embeddings Predict Co-movement?\n",
+        "\n",
+        "The critical test: do assets with similar embeddings have correlated returns? If embeddings only compress noise, similarity won't predict co-movement. If they capture real structure, similar assets should move together."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {},
+      "source": [
+        "print(\"\\n\" + \"=\"*70)\n",
+        "print(\"VALIDATION: EMBEDDINGS vs RETURN COMOVEMENT\")\n",
+        "print(\"=\"*70)\n",
+        "\n",
+        "# Generate synthetic returns using same factor structure\n",
+        "# This creates returns with known correlation structure\n",
+        "returns = asset_loadings @ np.random.randn(n_latent_factors, 120)  # 120 months\n",
+        "returns_df = pd.DataFrame(returns.T, columns=asset_names)\n",
+        "\n",
+        "# Add idiosyncratic noise\n",
+        "returns_df = returns_df + np.random.randn(*returns_df.shape) * 0.5\n",
+        "\n",
+        "print(f\"\\nGenerated {len(returns_df)} months of returns for {len(asset_names)} assets\")\n",
+        "\n",
+        "# Compute actual return correlations\n",
+        "return_corr = returns_df.corr()\n",
+        "\n",
+        "# Compute embedding-based similarities for all pairs\n",
+        "embedding_sim = pd.DataFrame(\n",
+        "    index=asset_names,\n",
+        "    columns=asset_names,\n",
+        "    dtype=float\n",
+        ")\n",
+        "\n",
+        "for i, asset1 in enumerate(asset_names):\n",
+        "    for j, asset2 in enumerate(asset_names):\n",
+        "        if i == j:\n",
+        "            embedding_sim.loc[asset1, asset2] = 1.0\n",
+        "        else:\n",
+        "            embedding_sim.loc[asset1, asset2] = embedder.similarity(asset1, asset2)\n",
+        "\n",
+        "# Extract upper triangle (avoid double-counting pairs)\n",
+        "upper_tri_idx = np.triu_indices_from(return_corr.values, k=1)\n",
+        "actual_corrs = return_corr.values[upper_tri_idx]\n",
+        "embedding_sims = embedding_sim.astype(float).values[upper_tri_idx]\n",
+        "\n",
+        "# Compute validation metric\n",
+        "correlation = np.corrcoef(actual_corrs, embedding_sims)[0, 1]\n",
+        "r_squared = correlation ** 2\n",
+        "\n",
+        "print(f\"\\nValidation Results:\")\n",
+        "print(f\"  Correlation between embedding similarity and return correlation: {correlation:.3f}\")\n",
+        "print(f\"  R² (variance explained): {r_squared:.1%}\")\n",
+        "print(f\"\\n  Interpretation: Embeddings explain {r_squared:.1%} of return comovement\")\n",
+        "\n",
+        "# Visualize\n",
+        "fig, axes = plt.subplots(1, 2, figsize=(14, 5))\n",
+        "\n",
+        "# Scatter plot: embeddings vs. correlations\n",
+        "axes[0].scatter(actual_corrs, embedding_sims, alpha=0.3, s=20)\n",
+        "axes[0].set_xlabel(\"Actual Return Correlation\", fontsize=11)\n",
+        "axes[0].set_ylabel(\"Embedding Similarity\", fontsize=11)\n",
+        "axes[0].set_title(\"Embeddings vs. Return Comovement\", fontsize=12, fontweight='bold')\n",
+        "axes[0].plot([-1, 1], [-1, 1], 'r--', linewidth=2, label='Perfect Prediction')\n",
+        "axes[0].legend()\n",
+        "axes[0].grid(True, alpha=0.3)\n",
+        "axes[0].text(0.05, 0.95, f\"Correlation: {correlation:.3f}\\nR²: {r_squared:.1%}\",\n",
+        "             transform=axes[0].transAxes, verticalalignment='top', fontsize=10,\n",
+        "             bbox=dict(boxstyle='round', facecolor='wheat', alpha=0.7))\n",
+        "\n",
+        "# 2D visualization of embedding space\n",
+        "embeddings_2d = TSNE(n_components=2, random_state=42, perplexity=min(30, n_assets-1)).fit_transform(\n",
+        "    embedder.asset_embeddings_.values\n",
+        ")\n",
+        "\n",
+        "axes[1].scatter(embeddings_2d[:, 0], embeddings_2d[:, 1], alpha=0.6, s=50)\n",
+        "axes[1].set_xlabel(\"Embedding Dimension 1 (t-SNE)\", fontsize=11)\n",
+        "axes[1].set_ylabel(\"Embedding Dimension 2 (t-SNE)\", fontsize=11)\n",
+        "axes[1].set_title(\"Asset Embedding Space\", fontsize=12, fontweight='bold')\n",
+        "axes[1].grid(True, alpha=0.3)\n",
+        "\n",
+        "# Annotate a few assets\n",
+        "for i in [0, 10, 20, 30, 40]:\n",
+        "    if i < len(asset_names):\n",
+        "        axes[1].annotate(asset_names[i], \n",
+        "                         xy=(embeddings_2d[i, 0], embeddings_2d[i, 1]),\n",
+        "                         xytext=(5, 5), textcoords='offset points', fontsize=8)\n",
+        "\n",
+        "plt.tight_layout()\n",
+        "plt.show()\n",
+        "\n",
+        "print(\"\\n✓ Validation complete\")"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Discussion Questions (Advanced Extension)\n",
+        "\n",
+        "Write 250-300 words addressing:\n",
+        "\n",
+        "1. **Representation Learning**: How do embeddings differ from traditional factor exposures (e.g., Fama-French loadings)? What information might embeddings capture that hand-crafted characteristics miss? What are the trade-offs?\n",
+        "\n",
+        "2. **Temporal Correctness**: Holdings data (13F filings) updates quarterly with 45-day lag. How does this affect using embeddings for:\n",
+        "   - Daily portfolio rebalancing?\n",
+        "   - Monthly factor construction?\n",
+        "   - Long-term strategic allocation?\n",
+        "   \n",
+        "   How would you construct point-in-time embeddings avoiding look-ahead bias?\n",
+        "\n",
+        "3. **Production Considerations**: \n",
+        "   - How often should embeddings be retrained as new holdings data arrives?\n",
+        "   - What drift metrics would detect when embeddings become stale?\n",
+        "   - How computationally expensive is embedding training compared to computing characteristics?\n",
+        "\n",
+        "4. **Governance & Explainability**: Imagine presenting to a risk committee:\n",
+        "   - \"We recommend buying TSLA because it has high embedding similarity to AAPL.\"\n",
+        "   - How would you make this interpretable and defensible?\n",
+        "   - What documentation would satisfy regulators?\n",
+        "   - When should opaque-but-accurate embeddings be preferred over transparent-but-limited characteristics?\n",
+        "\n",
+        "5. **Connection to Coursework 2**: Could embeddings improve your factor replication?\n",
+        "   - Use first few PCA components as additional factors in alpha tests\n",
+        "   - Compare characteristic-based vs. embedding-based portfolio construction\n",
+        "   - Evaluate out-of-sample: do embeddings generalize or overfit?\n",
+        "\n",
+        "### Extension for Ambitious Students\n",
+        "\n",
+        "If you want to push further, implement a **masked-asset prediction task**:\n",
+        "\n",
+        "1. For each portfolio, randomly mask (hide) 10% of holdings\n",
+        "2. Train model to predict masked assets from observed holdings\n",
+        "3. Evaluate: Do top-10 predictions include actual masked assets?\n",
+        "4. Compare: PCA baseline vs. simple neural network\n",
+        "\n",
+        "This mirrors @gabaix2025assetembeddings' core methodology and provides hands-on experience with the masked prediction objective used in transformer models (BERT-style).\n",
+        "\n",
+        "### Key Takeaways\n",
+        "\n",
+        "**Connections to Production ML:**\n",
+        "- Embeddings are learned features—automatically extracted from data\n",
+        "- Must retrain as holdings data arrives (temporal pipeline consideration)\n",
+        "- Require validation (do they predict out-of-sample outcomes?)\n",
+        "- Trade interpretability for potentially richer representations\n",
+        "\n",
+        "**Connections to Week 4 (Robo-Advisors):**\n",
+        "- Embeddings enable recommendation systems for portfolio construction\n",
+        "- Learning from professional investors' revealed preferences\n",
+        "- Potential to democratize sophisticated strategies at lower cost\n",
+        "\n",
+        "**Connections to Coursework:**\n",
+        "- Optional advanced component for FIN720 factor replication\n",
+        "- Demonstrates technical sophistication and engagement with frontier research\n",
+        "- Shows understanding of representation learning in financial contexts\n",
         "\n",
         "---\n",
         "\n",
