--- a/labs/lab02_apis.ipynb
+++ b/labs/lab02_apis.ipynb
@@ -562,7 +562,8 @@
         "if os.path.exists(local_path):\n",
         "    jkp = pd.read_csv(local_path, parse_dates=['date']).set_index('date').sort_index()\n",
         "else:\n",
-        "    url = \"https://raw.githubusercontent.com/quinfer/financial-data-science/main/resources/jkp-sample.csv\"\n",
+        "    # Use published site URL for Colab\n",
+        "    url = \"https://quinfer.github.io/financial-data-science/resources/jkp-sample.csv\"\n",
         "    jkp = pd.read_csv(url, parse_dates=['date']).set_index('date').sort_index()\n",
         "\n",
         "# Summary stats and quick cumulative return for MOM\n",
