--- a/labs/lab08_blockchain_fraud.ipynb
+++ b/labs/lab08_blockchain_fraud.ipynb
@@ -13,6 +13,7 @@
         "    number-sections: true\n",
         "execute:\n",
         "  echo: true\n",
+        "  eval: false\n",
         "  warning: false\n",
         "  message: false\n",
         "---\n",
