--- a/labs/lab09_smart_contracts.ipynb
+++ b/labs/lab09_smart_contracts.ipynb
@@ -13,6 +13,7 @@
         "    number-sections: true\n",
         "execute:\n",
         "  echo: true\n",
+        "  eval: false\n",
         "  warning: false\n",
         "  message: false\n",
         "---\n",
