--- a/labs/lab05_jkp_starter.ipynb
+++ b/labs/lab05_jkp_starter.ipynb
@@ -76,7 +76,7 @@
         "# jkp = pd.read_csv('/content/JKP_region_monthly.csv')\n",
         "\n",
         "# Option B: use course sample (small demo)\n",
-        "sample_url = 'https://quinfer.github.io/financial-data-science/resources/jkp-sample.csv'\n",
+        "sample_url = 'https://raw.githubusercontent.com/quinfer/fin510-colab-notebooks/main/resources/jkp-sample.csv'\n",
         "jkp = pd.read_csv(sample_url)\n",
         "\n",
         "# Expect columns: date, MKT, SMB, HML, MOM (monthly)\n",
