--- a/labs/lab02_apis.ipynb
+++ b/labs/lab02_apis.ipynb
@@ -35,7 +35,7 @@
         "\n",
         "## Setup (Colab‑only installs)"
       ],
-      "id": "5b1f0d16-7f03-414c-adeb-89836047e4a7"
+      "id": "94d325e3-eaac-499e-93c1-515c7bbac847"
     },
     {
       "cell_type": "code",
@@ -48,7 +48,7 @@
         "except Exception:\n",
         "    !pip -q install yfinance pandas pandas-datareader"
       ],
-      "id": "d210fc82"
+      "id": "cacc6853"
     },
     {
       "cell_type": "markdown",
@@ -122,7 +122,7 @@
         "\n",
         "### Step 1: Define robust fetching functions"
       ],
-      "id": "cc9ba5e4-985d-4c3e-9b29-1a580e2289db"
+      "id": "c0b97b1c-f7ca-45a3-973b-92edc729f8a5"
     },
     {
       "cell_type": "code",
@@ -332,7 +332,7 @@
         "    \n",
         "    return pd.DataFrame(levels, index=dates, columns=symbols)"
       ],
-      "id": "c0a42a8b"
+      "id": "1cfa9808"
     },
     {
       "cell_type": "markdown",
@@ -340,7 +340,7 @@
       "source": [
         "### Step 2: Execute three-tier fetching strategy"
       ],
-      "id": "b7a03e87-75ea-41b1-96cb-08977f51f0bc"
+      "id": "9830eb8b-fa1e-4fd3-a47e-7320b19ee0a7"
     },
     {
       "cell_type": "code",
@@ -403,7 +403,7 @@
         "print(f\"\\nLast 3 rows:\")\n",
         "print(prices.tail(3))"
       ],
-      "id": "2bf02c0f"
+      "id": "68d6a5ef"
     },
     {
       "cell_type": "markdown",
@@ -417,7 +417,7 @@
         "\n",
         "### Step 3: Validate data quality"
       ],
-      "id": "5f11e823-c10c-4bd4-bd24-7f6f49cbfa12"
+      "id": "bdc53acb-26cd-4d37-a54f-af7a69833092"
     },
     {
       "cell_type": "code",
@@ -479,7 +479,7 @@
         "else:\n",
         "    print(f\"\\n⚠ Warning: no data returned from any source\")"
       ],
-      "id": "2a4ece9c"
+      "id": "6f964843"
     },
     {
       "cell_type": "markdown",
@@ -496,71 +496,88 @@
         ">\n",
         "> **Rule of thumb:** \\<1% missing is acceptable, \\>5% requires\n",
         "> investigation\n",
+        ">\n",
+        "> **Checkpoint:** Look at your log. Which quality issues did you find?\n",
+        "> How would you handle them differently for a production system\n",
+        "> vs. academic analysis?\n",
         "\n",
-        "**Checkpoint:** Look at your log. Which quality issues did you find? How\n",
-        "would you handle them differently for a production system vs. academic\n",
-        "analysis?\n",
+        "## Task 2 — Clean and Save\n",
         "\n",
+        "Raw data always has issues. Professional practice: **clean\n",
+        "conservatively** and **document decisions**.\n",
         "\n",
-        "    ## Task 2 — Clean and Save\n",
+        "> **Cleaning Strategy**\n",
+        ">\n",
+        "> 1.  **Drop NaN rows** - Can’t calculate returns without prices\n",
+        "> 2.  **Clip outliers** - Cap extreme values at ±20% (likely errors or\n",
+        ">     halts)\n",
+        "> 3.  **Save intermediate output** - Enables reproducibility and\n",
+        ">     debugging\n",
+        "> 4.  **Document transformations** - What did you change and why?\n",
         "\n",
-        "    Raw data always has issues. Professional practice: **clean conservatively** and **document decisions**.\n",
+        "### Step 1: Clean the data"
+      ],
+      "id": "794b6887-e06c-4ad6-962c-a3236bd1bd1d"
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 5,
+      "metadata": {},
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Original shape: (511, 3)\n",
+            "After dropna: (510, 3)\n",
+            "Rows removed: 1\n",
+            "\n",
+            "=== Outlier Treatment ===\n",
+            "Values clipped at lower bound (-20%): 0\n",
+            "Values clipped at upper bound (+20%): 0\n",
+            "\n",
+            "Cleaned returns (last 5 days):\n",
+            "                AAPL      MSFT       SPY\n",
+            "Date                                    \n",
+            "2025-10-02  0.006577 -0.007639  0.001152\n",
+            "2025-10-03  0.003461  0.003122 -0.000015\n",
+            "2025-10-06 -0.005155  0.021687  0.003586\n",
+            "2025-10-07 -0.000818 -0.008684 -0.003708\n",
+            "2025-10-08  0.006160  0.001660  0.005963"
+          ]
+        }
+      ],
+      "source": [
+        "# === Remove rows where all returns are missing ===\n",
+        "clean = rets.dropna()\n",
         "\n",
-        "    ::: {.callout-note}\n",
-        "    ## Cleaning Strategy\n",
-        "    1. **Drop NaN rows** - Can't calculate returns without prices\n",
-        "    2. **Clip outliers** - Cap extreme values at ±20% (likely errors or halts)\n",
-        "    3. **Save intermediate output** - Enables reproducibility and debugging\n",
-        "    4. **Document transformations** - What did you change and why?\n",
-        "    :::\n",
+        "print(f\"Original shape: {rets.shape}\")\n",
+        "print(f\"After dropna: {clean.shape}\")\n",
+        "print(f\"Rows removed: {rets.shape[0] - clean.shape[0]}\")\n",
         "\n",
-        "    ### Step 1: Clean the data\n",
+        "# === Clip extreme values (conservative approach) ===\n",
+        "# Instead of deleting outliers, cap them at reasonable limits\n",
+        "# -20% to +20% captures 99%+ of normal daily returns\n",
+        "clean_clipped = clean.clip(lower=-0.2, upper=0.2)\n",
         "\n",
-        "    ::: {#055fefcc .cell execution_count=5}\n",
-        "    ``` {.python .cell-code}\n",
-        "    # === Remove rows where all returns are missing ===\n",
-        "    clean = rets.dropna()\n",
+        "# Count how many values were clipped\n",
+        "clipped_low = (clean < -0.2).sum().sum()\n",
+        "clipped_high = (clean > 0.2).sum().sum()\n",
         "\n",
-        "    print(f\"Original shape: {rets.shape}\")\n",
-        "    print(f\"After dropna: {clean.shape}\")\n",
-        "    print(f\"Rows removed: {rets.shape[0] - clean.shape[0]}\")\n",
+        "print(f\"\\n=== Outlier Treatment ===\")\n",
+        "print(f\"Values clipped at lower bound (-20%): {clipped_low}\")\n",
+        "print(f\"Values clipped at upper bound (+20%): {clipped_high}\")\n",
         "\n",
-        "    # === Clip extreme values (conservative approach) ===\n",
-        "    # Instead of deleting outliers, cap them at reasonable limits\n",
-        "    # -20% to +20% captures 99%+ of normal daily returns\n",
-        "    clean_clipped = clean.clip(lower=-0.2, upper=0.2)\n",
-        "\n",
-        "    # Count how many values were clipped\n",
-        "    clipped_low = (clean < -0.2).sum().sum()\n",
-        "    clipped_high = (clean > 0.2).sum().sum()\n",
-        "\n",
-        "    print(f\"\\n=== Outlier Treatment ===\")\n",
-        "    print(f\"Values clipped at lower bound (-20%): {clipped_low}\")\n",
-        "    print(f\"Values clipped at upper bound (+20%): {clipped_high}\")\n",
-        "\n",
-        "    # Display sample\n",
-        "    print(f\"\\nCleaned returns (last 5 days):\")\n",
-        "    print(clean_clipped.tail())\n",
-        "\n",
-        "    Original shape: (511, 3)\n",
-        "    After dropna: (510, 3)\n",
-        "    Rows removed: 1\n",
-        "\n",
-        "    === Outlier Treatment ===\n",
-        "    Values clipped at lower bound (-20%): 0\n",
-        "    Values clipped at upper bound (+20%): 0\n",
-        "\n",
-        "    Cleaned returns (last 5 days):\n",
-        "                    AAPL      MSFT       SPY\n",
-        "    Date                                    \n",
-        "    2025-10-02  0.006577 -0.007639  0.001152\n",
-        "    2025-10-03  0.003461  0.003122 -0.000015\n",
-        "    2025-10-06 -0.005155  0.021687  0.003586\n",
-        "    2025-10-07 -0.000818 -0.008684 -0.003708\n",
-        "    2025-10-08  0.006160  0.001660  0.005963\n",
-        "\n",
-        ":::\n",
-        "\n",
+        "# Display sample\n",
+        "print(f\"\\nCleaned returns (last 5 days):\")\n",
+        "print(clean_clipped.tail())"
+      ],
+      "id": "b061bde4"
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
         "> **Why Clip Instead of Delete?**\n",
         ">\n",
         "> -   **Deleting** outliers shortens your time series (breaks\n",
@@ -570,7 +587,7 @@
         "\n",
         "### Step 2: Save cleaned data"
       ],
-      "id": "a6cd392f-b4fb-47db-988d-b638c8bd16bf"
+      "id": "4aacab31-4f2c-4120-bf0f-0c4b48e6951d"
     },
     {
       "cell_type": "code",
@@ -620,7 +637,7 @@
         "print(f\"\\n=== Cleaning Summary ===\")\n",
         "print(json.dumps(cleaning_log, indent=2))"
       ],
-      "id": "5e14c440"
+      "id": "c8d76a0d"
     },
     {
       "cell_type": "markdown",
@@ -653,7 +670,7 @@
         "2. Load a small sample CSV, compute quick stats, and (optionally) run a\n",
         "one‑line CAPM alpha."
       ],
-      "id": "a01ef5a3-88ab-46aa-8aa9-6a370925fe4a"
+      "id": "3b66802f-aaaf-4f0d-b4c3-e0348294abaa"
     },
     {
       "cell_type": "code",
@@ -695,7 +712,7 @@
         "capm = sm.OLS(ls, sm.add_constant(mkt)).fit()\n",
         "float(capm.params['const']), float(capm.tvalues['const'])"
       ],
-      "id": "e086484e"
+      "id": "0066d05d"
     },
     {
       "cell_type": "markdown",
@@ -707,7 +724,7 @@
         "\n",
         "## Quick Leakage Check (Practice)"
       ],
-      "id": "261baac4-3463-41fa-9eb7-c873bf6f36fe"
+      "id": "783f736b-a22e-480c-abd2-1f8699172ca4"
     },
     {
       "cell_type": "code",
@@ -741,7 +758,7 @@
         "df = pd.concat([X, y.rename('y')], axis=1).dropna()\n",
         "print(\"Rows after proper shift/drop:\", len(df))"
       ],
-      "id": "90ed9cb6"
+      "id": "c58a8d6b"
     }
   ],
   "nbformat": 4,
