Fix markdown cell formatting in CW2 scaffold

--- a/labs/coursework2_scaffold.ipynb
+++ b/labs/coursework2_scaffold.ipynb
@@ -4,21 +4,36 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# FIN510 Coursework 2 - Starter Notebook\\n",
-    "\\n",
-    "**Instructions**: This notebook provides all the code you need for a passable submission. Simply:\\n",
-    "\\n",
-    "1. Choose Option A (Replication) or Option B (Prediction)\\n",
-    "2. Run each code cell in order\\n",
-    "3. Look at the outputs (tables and figures)\\n",
-    "4. Write your report interpreting these outputs\\n",
-    "\\n",
-    "**What you need to change**:\\n",
-    "\\n",
-    "- Your data file name (line marked with `# CHANGE THIS`)\\n",
-    "- Your factor choice for Option A (line marked with `# CHANGE THIS`)\\n",
-    "- (Optional) Your predictors for Option B\\n",
-    "\\n",
+    "# FIN510 Coursework 2 - Starter Notebook\n",
+    "\n",
+    "\n",
+    "\n",
+    "**Instructions**: This notebook provides all the code you need for a passable submission. Simply:\n",
+    "\n",
+    "\n",
+    "\n",
+    "1. Choose Option A (Replication) or Option B (Prediction)\n",
+    "\n",
+    "2. Run each code cell in order\n",
+    "\n",
+    "3. Look at the outputs (tables and figures)\n",
+    "\n",
+    "4. Write your report interpreting these outputs\n",
+    "\n",
+    "\n",
+    "\n",
+    "**What you need to change**:\n",
+    "\n",
+    "\n",
+    "\n",
+    "- Your data file name (line marked with `# CHANGE THIS`)\n",
+    "\n",
+    "- Your factor choice for Option A (line marked with `# CHANGE THIS`)\n",
+    "\n",
+    "- (Optional) Your predictors for Option B\n",
+    "\n",
+    "\n",
+    "\n",
     "**Submission**: Submit this notebook (after running all cells) with your Word report."
    ]
   },
@@ -26,8 +41,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Setup: Install and Import Libraries\\n",
-    "\\n",
+    "## Setup: Install and Import Libraries\n",
+    "\n",
     "Run this cell first. It installs and imports everything you need."
    ]
   },
@@ -212,12 +227,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "---\\n",
-    "\\n",
-    "# CHOOSE YOUR OPTION\\n",
-    "\\n",
-    "**Run EITHER Option A OR Option B below** (not both)\\n",
-    "\\n",
+    "---\n",
+    "\n",
+    "# CHOOSE YOUR OPTION\n",
+    "\n",
+    "**Run EITHER Option A OR Option B below** (not both)\n",
+    "\n",
     "---"
    ]
   },
@@ -225,8 +240,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# OPTION A: Factor Replication (Recommended for Beginners)\\n",
-    "\\n",
+    "# OPTION A: Factor Replication (Recommended for Beginners)\n",
+    "\n",
     "This option analyses a single factor (like Value or Momentum) and tests whether it generates excess returns."
    ]
   },
@@ -265,8 +280,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## A2: Summary Statistics\\n",
-    "\\n",
+    "## A2: Summary Statistics\n",
+    "\n",
     "This produces Table 1 for your report."
    ]
   },
@@ -307,8 +322,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## A3: Cumulative Returns Plot\\n",
-    "\\n",
+    "## A3: Cumulative Returns Plot\n",
+    "\n",
     "This produces Figure 1 for your report."
    ]
   },
@@ -342,10 +357,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## A4: Alpha Regression (CAPM)\\n",
-    "\\n",
-    "This tests whether your factor has significant excess returns (alpha) after controlling for market risk.\\n",
-    "\\n",
+    "## A4: Alpha Regression (CAPM)\n",
+    "\n",
+    "This tests whether your factor has significant excess returns (alpha) after controlling for market risk.\n",
+    "\n",
     "This produces Table 2 for your report."
    ]
   },
@@ -405,10 +420,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## A5: Robustness Check - Sample Split\\n",
-    "\\n",
-    "This splits your data into two periods to check if results are stable.\\n",
-    "\\n",
+    "## A5: Robustness Check - Sample Split\n",
+    "\n",
+    "This splits your data into two periods to check if results are stable.\n",
+    "\n",
     "This produces Table 3 and Figure 2 for your report."
    ]
   },
@@ -480,27 +495,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## A6: Summary - What You Need for Your Report\\n",
-    "\\n",
-    "You now have:\\n",
-    "\\n",
-    "**Tables**:\\n",
-    "\\n",
-    "1. `table1_summary_stats.csv` - Descriptive statistics\\n",
-    "2. `table2_alpha_regression.csv` - CAPM alpha test\\n",
-    "3. `table3_robustness.csv` - Sample split results\\n",
-    "\\n",
-    "**Figures**:\\n",
-    "\\n",
-    "1. `figure1_cumulative_returns.png` - Performance over time\\n",
-    "2. `figure2_rolling_sharpe.png` - Stability check\\n",
-    "\\n",
-    "**For your report**, interpret these results:\\n",
-    "\\n",
-    "- Does your factor generate positive average returns?\\n",
-    "- Is the alpha statistically significant?\\n",
-    "- Are results stable across sub-periods?\\n",
-    "- What are the portfolio/investment implications?\\n",
+    "## A6: Summary - What You Need for Your Report\n",
+    "\n",
+    "You now have:\n",
+    "\n",
+    "**Tables**:\n",
+    "\n",
+    "1. `table1_summary_stats.csv` - Descriptive statistics\n",
+    "2. `table2_alpha_regression.csv` - CAPM alpha test\n",
+    "3. `table3_robustness.csv` - Sample split results\n",
+    "\n",
+    "**Figures**:\n",
+    "\n",
+    "1. `figure1_cumulative_returns.png` - Performance over time\n",
+    "2. `figure2_rolling_sharpe.png` - Stability check\n",
+    "\n",
+    "**For your report**, interpret these results:\n",
+    "\n",
+    "- Does your factor generate positive average returns?\n",
+    "- Is the alpha statistically significant?\n",
+    "- Are results stable across sub-periods?\n",
+    "- What are the portfolio/investment implications?\n",
     "- What are the limitations of this analysis?"
    ]
   },
@@ -508,12 +523,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "---\\n",
-    "\\n",
-    "# OPTION B: Market Prediction (More Advanced)\\n",
-    "\\n",
-    "This option predicts next month's market return using factors as predictors.\\n",
-    "\\n",
+    "---\n",
+    "\n",
+    "# OPTION B: Market Prediction (More Advanced)\n",
+    "\n",
+    "This option predicts next month's market return using factors as predictors.\n",
+    "\n",
     "*Note: Only complete Option B if you did NOT complete Option A*"
    ]
   },
@@ -564,8 +579,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## B2: Walk-Forward Prediction\\n",
-    "\\n",
+    "## B2: Walk-Forward Prediction\n",
+    "\n",
     "This compares OLS vs Ridge regression in a realistic walk-forward test."
    ]
   },
@@ -627,8 +642,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## B3: Evaluation Metrics\\n",
-    "\\n",
+    "## B3: Evaluation Metrics\n",
+    "\n",
     "This produces Table 1 for your report."
    ]
   },
@@ -681,8 +696,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## B4: Rolling R\u00b2 Plot\\n",
-    "\\n",
+    "## B4: Rolling R\u00b2 Plot\n",
+    "\n",
     "This produces Figure 1 for your report."
    ]
   },
@@ -734,25 +749,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## B5: Summary - What You Need for Your Report\\n",
-    "\\n",
-    "You now have:\\n",
-    "\\n",
-    "**Tables**:\\n",
-    "\\n",
-    "1. `table1_prediction_results.csv` - Performance metrics\\n",
-    "\\n",
-    "**Figures**:\\n",
-    "\\n",
-    "1. `figure1_rolling_r2.png` - Stability over time\\n",
-    "\\n",
-    "**For your report**, interpret these results:\\n",
-    "\\n",
-    "- Which model performs better (OLS or Ridge)?\\n",
-    "- Is the predictive power positive (R\u00b2 > 0)?\\n",
-    "- Is directional accuracy better than 50% (random guessing)?\\n",
-    "- How stable are the predictions over time?\\n",
-    "- What are the investment implications?\\n",
+    "## B5: Summary - What You Need for Your Report\n",
+    "\n",
+    "You now have:\n",
+    "\n",
+    "**Tables**:\n",
+    "\n",
+    "1. `table1_prediction_results.csv` - Performance metrics\n",
+    "\n",
+    "**Figures**:\n",
+    "\n",
+    "1. `figure1_rolling_r2.png` - Stability over time\n",
+    "\n",
+    "**For your report**, interpret these results:\n",
+    "\n",
+    "- Which model performs better (OLS or Ridge)?\n",
+    "- Is the predictive power positive (R\u00b2 > 0)?\n",
+    "- Is directional accuracy better than 50% (random guessing)?\n",
+    "- How stable are the predictions over time?\n",
+    "- What are the investment implications?\n",
     "- What are the limitations?"
    ]
   },
@@ -760,34 +775,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "---\\n",
-    "\\n",
-    "# Final Checklist\\n",
-    "\\n",
-    "Before submitting:\\n",
-    "\\n",
-    "**Notebook**:\\n",
-    "\\n",
-    "- [ ] All cells have been run successfully\\n",
-    "- [ ] All outputs (tables/figures) are visible\\n",
-    "- [ ] Data file name is correct\\n",
-    "- [ ] Factor choice (Option A) or predictors (Option B) are appropriate\\n",
-    "\\n",
-    "**Report (separate Word document)**:\\n",
-    "\\n",
-    "- [ ] Introduction: Research question and motivation\\n",
-    "- [ ] Data: Source, period, any limitations\\n",
-    "- [ ] Methodology: Brief description of approach\\n",
-    "- [ ] Results: Include tables/figures from notebook with interpretation\\n",
-    "- [ ] Discussion: Limitations and investment implications\\n",
-    "- [ ] References: Cite Jensen, Kelly & Pedersen (2024) and other sources\\n",
-    "\\n",
-    "**Files to submit**:\\n",
-    "\\n",
-    "1. This notebook (`.ipynb` file)\\n",
-    "2. Your report (Word document)\\n",
-    "3. (Optional) The data CSV file if < 5MB\\n",
-    "\\n",
+    "---\n",
+    "\n",
+    "# Final Checklist\n",
+    "\n",
+    "Before submitting:\n",
+    "\n",
+    "**Notebook**:\n",
+    "\n",
+    "- [ ] All cells have been run successfully\n",
+    "- [ ] All outputs (tables/figures) are visible\n",
+    "- [ ] Data file name is correct\n",
+    "- [ ] Factor choice (Option A) or predictors (Option B) are appropriate\n",
+    "\n",
+    "**Report (separate Word document)**:\n",
+    "\n",
+    "- [ ] Introduction: Research question and motivation\n",
+    "- [ ] Data: Source, period, any limitations\n",
+    "- [ ] Methodology: Brief description of approach\n",
+    "- [ ] Results: Include tables/figures from notebook with interpretation\n",
+    "- [ ] Discussion: Limitations and investment implications\n",
+    "- [ ] References: Cite Jensen, Kelly & Pedersen (2024) and other sources\n",
+    "\n",
+    "**Files to submit**:\n",
+    "\n",
+    "1. This notebook (`.ipynb` file)\n",
+    "2. Your report (Word document)\n",
+    "3. (Optional) The data CSV file if < 5MB\n",
+    "\n",
     "Good luck! \ud83c\udf93"
    ]
   }
