update notebooks and Bloomberg DB

--- a/labs/lab03_time_series.ipynb
+++ b/labs/lab03_time_series.ipynb
@@ -23,7 +23,7 @@
         "\n",
         "## Setup"
       ],
-      "id": "2624dac8-2d91-4196-b24e-8758a2c95f44"
+      "id": "956f5ec7-e0db-4087-af38-31d6a8044d95"
     },
     {
       "cell_type": "code",
@@ -61,7 +61,7 @@
         "\n",
         "### 1.1 Load Bloomberg Database"
       ],
-      "id": "94e1f907-2f17-40e5-9317-87854425b686"
+      "id": "5a22bae1-6e5b-49b1-a17b-f8d86762efae"
     },
     {
       "cell_type": "code",
@@ -69,8 +69,20 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "# Load the Bloomberg database\n",
-        "df = pd.read_parquet('../data/bloomberg_database/bloomberg_database.parquet')\n",
+        "# Resolve path: local (repo root / labs / labs/notebooks) or Colab (raw URL)\n",
+        "from pathlib import Path\n",
+        "COLAB_DB_URL = \"https://raw.githubusercontent.com/quinfer/fin510-colab-notebooks/main/resources/bloomberg_database.parquet\"\n",
+        "_candidates = [\n",
+        "    Path(\"data/bloomberg_database/bloomberg_database.parquet\"),   # project root\n",
+        "    Path(\"../data/bloomberg_database/bloomberg_database.parquet\"), # labs/\n",
+        "    Path(\"../../data/bloomberg_database/bloomberg_database.parquet\"), # labs/notebooks/\n",
+        "]\n",
+        "_data_path = next((p for p in _candidates if p.exists()), None)\n",
+        "if _data_path is not None:\n",
+        "    df = pd.read_parquet(_data_path)\n",
+        "else:\n",
+        "    # Fallback: Colab or any env where DB is fetched from public repo\n",
+        "    df = pd.read_parquet(COLAB_DB_URL)\n",
         "\n",
         "# Preview\n",
         "print(df.head())\n",
@@ -87,7 +99,7 @@
         "\n",
         "**Task:** Compare SPY prices and returns to diagnose stationarity."
       ],
-      "id": "2c6105b6-b3cb-41db-88c5-76fd637b0322"
+      "id": "d51e9d42-7bdf-4dc3-91e6-f045f5a8ceb6"
     },
     {
       "cell_type": "code",
@@ -138,7 +150,7 @@
         "**Stationary**: ACF drops quickly to zero - **Non-stationary**: ACF\n",
         "decays slowly"
       ],
-      "id": "ef143018-2c7c-4431-883c-5d44d000067b"
+      "id": "73974a14-e8a9-4d94-af60-5cb564d4d9d5"
     },
     {
       "cell_type": "code",
@@ -178,7 +190,7 @@
         "stationary - **Decision**: If p-value \\< 0.05, reject null → series is\n",
         "stationary"
       ],
-      "id": "6e5bebd3-21cb-48b3-9d51-205161a4673a"
+      "id": "3a186ecf-6972-4e26-9b79-b74d88476951"
     },
     {
       "cell_type": "code",
@@ -224,7 +236,7 @@
         "\n",
         "**Your task:** Apply the same diagnostics to the VIX index."
       ],
-      "id": "55f4b131-fdc5-417f-86e6-13947dbc627e"
+      "id": "ccc0a1be-8337-4abb-abad-f8bd61ddb9c9"
     },
     {
       "cell_type": "code",
@@ -282,7 +294,7 @@
         "Remember from the slides: returns are unpredictable, but **volatility**\n",
         "is predictable."
       ],
-      "id": "b43e9c96-bd60-471f-ad41-2b7d9cbac89c"
+      "id": "3efb19e5-cdf0-4fed-9e80-9cd07a5fa08c"
     },
     {
       "cell_type": "code",
@@ -330,7 +342,7 @@
         "| MA(q)     | Cuts off after lag q | Exponential decay    |\n",
         "| ARMA(p,q) | Both decay           | Both decay           |"
       ],
-      "id": "c3d7953b-47eb-4e40-bb86-11f95974fb23"
+      "id": "40a261d2-f830-4ba5-809f-c0373adf2219"
     },
     {
       "cell_type": "code",
@@ -372,7 +384,7 @@
         "\n",
         "Let’s fit an AR(1) model: $VIX_t = c + \\phi_1 VIX_{t-1} + \\varepsilon_t$"
       ],
-      "id": "1d7391e7-7bff-4ac9-b506-93c45ffba48d"
+      "id": "dd3c6295-a0c7-4ede-9fc5-5b85b7b832f2"
     },
     {
       "cell_type": "code",
@@ -391,7 +403,7 @@
         "fig, ax = plt.subplots(figsize=(12, 5))\n",
         "ax.plot(vix.index, vix['PX_LAST'], label='Observed', \n",
         "        linewidth=0.8, alpha=0.7, color='coral')\n",
-        "ax.plot(vix.index[1:], results_ar1.fittedvalues, \n",
+        "ax.plot(vix.index, results_ar1.fittedvalues, \n",
         "        label='AR(1) Fitted', linewidth=1.5, color='steelblue')\n",
         "ax.set_ylabel('VIX Level')\n",
         "ax.set_title('VIX: AR(1) Model Fit')\n",
@@ -423,7 +435,7 @@
         "**less than 0.05**, we reject and should consider more lags or a\n",
         "different model (Tsay, 2010, Ch 2)."
       ],
-      "id": "779d4447-c93b-4b26-a577-6e0d42eeb67e"
+      "id": "62ed2df2-9e70-4202-99ce-d64130b4acfa"
     },
     {
       "cell_type": "code",
@@ -483,7 +495,7 @@
         "**Your task:** SPY prices are non-stationary. Fit an ARIMA(1,1,0) model\n",
         "(random walk with drift)."
       ],
-      "id": "2e949fc7-3e63-42dd-8164-1c8572993230"
+      "id": "5fd3ae9d-f15c-45fa-bf78-c16614d050bc"
     },
     {
       "cell_type": "code",
@@ -504,7 +516,7 @@
         "# \n",
         "# fig, ax = plt.subplots(figsize=(12, 5))\n",
         "# ax.plot(spy.index, spy['PX_LAST'], label='Observed', alpha=0.7)\n",
-        "# ax.plot(spy.index[1:], results_spy.fittedvalues, label='ARIMA(1,1,0) Fitted')\n",
+        "# ax.plot(spy.index, results_spy.fittedvalues, label='ARIMA(1,1,0) Fitted')\n",
         "# ax.legend()\n",
         "# plt.show()"
       ],
@@ -526,7 +538,7 @@
         "Before fitting complex models, establish **naive** and **mean**\n",
         "baselines."
       ],
-      "id": "320a1132-e36d-48aa-ab84-9dc839953372"
+      "id": "f7efd3db-96da-41ec-b286-e0807a4b1c25"
     },
     {
       "cell_type": "code",
@@ -587,7 +599,7 @@
         "\n",
         "Does AR(1) beat naive?"
       ],
-      "id": "5c84da7e-4d3f-4fe0-b2d8-8335cdf6eafb"
+      "id": "69471729-a35c-4148-8371-742e25dcc7ad"
     },
     {
       "cell_type": "code",
@@ -643,7 +655,7 @@
         "\n",
         "Single train/test split is risky. Use **time series cross-validation**."
       ],
-      "id": "da266d4f-cafd-45fe-ae67-5ba80d776c2a"
+      "id": "78aaf1a0-fae6-4db0-8ea2-1b409ca88eeb"
     },
     {
       "cell_type": "code",
@@ -713,7 +725,7 @@
         "of whether ARIMA adds value for the problem most practitioners care\n",
         "about."
       ],
-      "id": "725627bc-cce0-498d-b686-cf91d6bfd12f"
+      "id": "3465cf78-cb87-4dbe-aede-1ab72ebde919"
     },
     {
       "cell_type": "code",
@@ -802,7 +814,7 @@
         "Bitcoin is highly volatile and non-stationary. Test different ARIMA\n",
         "specifications."
       ],
-      "id": "ca530947-589d-475d-9bc8-8d99aec46428"
+      "id": "c4f92872-2505-45c9-be6f-fb171c963a88"
     },
     {
       "cell_type": "code",
@@ -830,7 +842,7 @@
         "The 10-year Treasury yield may be mean-reverting or trending depending\n",
         "on the period."
       ],
-      "id": "6df58886-a129-4fdf-a662-112b34d37612"
+      "id": "3829d7b6-7744-469b-8f11-a615640e50b9"
     },
     {
       "cell_type": "code",
@@ -878,7 +890,7 @@
         "-   Hyndman, R. J., & Athanasopoulos, G. (2021). *Forecasting:\n",
         "    Principles and Practice*, 3rd ed."
       ],
-      "id": "418446ac-3af1-43d6-a547-77da55bb9aed"
+      "id": "9e14284a-30e3-4bca-a9b2-5c269dccdae9"
     }
   ],
   "nbformat": 4,
